abstrações e inclusao de token

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>6.1.4.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
