--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ jwt.secret=customMoveis
 spring.datasource.url=jdbc:mysql://localhost/customMoveis?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.platform=mysql
+spring.sql.init.platform=mysql
 spring.jpa.hibernate.ddl-auto=create
 server.port=8080
 spring.main.allow-circular-references=true
