ajuste em retorno de entidades e mapeamentos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.sql.init.platform=mysql
 spring.jpa.hibernate.ddl-auto=create
 server.port=8080
 spring.main.allow-circular-references=true
+spring.jackson.default-property-inclusion = NON_NULL
