--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.14.0-rc3</version>
+		</dependency>
+	
 		
 		<dependency>
 			<groupId>org.hibernate.orm</groupId>
